# ksystemlog

./: .clang-format  .cproject  .flatpak-manifest.json  .git-blame-ignore-revs  .gitlab-ci.yml  .kde-ci.yml  .project  .reviewboardrc  CMakeLists.txt  CMakePresets.json  Changelog  INSTALL  Mainpage.dox  Messages.sh  build-package.sh  snapcraft.yaml
autotests/: CMakeLists.txt  findIncompatibleKioTest.cpp  kernelAnalyzerTest.cpp  kioLogFileReaderTest.cpp  logModeFactoryTest.cpp  systemAnalyzerTest.cpp  testUtil.cpp  testUtil.h
autotests/testFiles/cups/: access_log  error_log
autotests/testFiles/kernel/: ubuntu.dmesg
autotests/testFiles/logFileReader/: file.txt
autotests/testFiles/samba/: log.hostname1  log.nmbd  log.smbd
autotests/testFiles/xsession/: xsession-error
src/: CMakeLists.txt  configurationDialog.cpp  configurationDialog.h  detailDialog.cpp  detailDialog.h  detailDialogBase.ui  generalConfigurationWidget.cpp  generalConfigurationWidget.h  generalConfigurationWidgetBase.ui  hisc-app-ksystemlog.svgz  ksystemlog.desktop  ksystemlog.lsm  ksystemlogui.qrc  ksystemlogui.rc  logModePluginsLoader.cpp  logModePluginsLoader.h  loggerDialog.cpp  loggerDialog.h  loggerDialogBase.ui  main.cpp  mainWindow.cpp  mainWindow.h  org.kde.ksystemlog.appdata.xml  org.kde.ksystemlog.desktop  statusBar.cpp  statusBar.h  tabLogManager.cpp  tabLogManager.h  tabLogViewsWidget.cpp  tabLogViewsWidget.h
src/config/: CMakeLists.txt  dummyConfig.cpp  ksystemlog.kcfg  ksystemlogConfig.kcfgc
src/lib/: CMakeLists.txt  analyzer.cpp  analyzer.h  defaults.h  fileAnalyzer.cpp  fileAnalyzer.h  globals.cpp  globals.h  kioLogFileReader.cpp  kioLogFileReader.h  levelPrintPage.cpp  levelPrintPage.h  loadingBar.cpp  loadingBar.h  localLogFileReader.cpp  localLogFileReader.h  logFile.cpp  logFile.h  logFileReader.cpp  logFileReader.h  logFileReaderPrivate.h  logLevel.cpp  logLevel.h  logLine.cpp  logLine.h  logManager.cpp  logManager.h  logMode.cpp  logMode.h  logModeAction.cpp  logModeAction.h  logModeConfiguration.cpp  logModeConfiguration.h  logModeConfigurationWidget.cpp  logModeConfigurationWidget.h  logModeFactory.cpp  logModeFactory.h  logModeItemBuilder.cpp  logModeItemBuilder.h  logViewColumn.cpp  (+25 more)
src/modes/acpid/: CMakeLists.txt  acpidAnalyzer.cpp  acpidAnalyzer.h  acpidConfiguration.cpp  acpidConfiguration.h  acpidConfigurationWidget.cpp  acpidConfigurationWidget.h  acpidFactory.cpp  acpidFactory.h  acpidItemBuilder.cpp  acpidItemBuilder.h  acpidLogMode.cpp  acpidLogMode.h
src/modes/apache/: CMakeLists.txt  apacheAccessAnalyzer.cpp  apacheAccessAnalyzer.h  apacheAccessItemBuilder.cpp  apacheAccessItemBuilder.h  apacheAccessLogMode.cpp  apacheAccessLogMode.h  apacheAnalyzer.cpp  apacheAnalyzer.h  apacheConfiguration.cpp  apacheConfiguration.h  apacheConfigurationWidget.cpp  apacheConfigurationWidget.h  apacheFactory.cpp  apacheFactory.h  apacheItemBuilder.cpp  apacheItemBuilder.h  apacheLogMode.cpp  apacheLogMode.h
src/modes/audit/: CMakeLists.txt  auditAnalyzer.cpp  auditAnalyzer.h  auditConfiguration.cpp  auditConfiguration.h  auditConfigurationWidget.cpp  auditConfigurationWidget.h  auditConvertor.cpp  auditConvertor.h  auditFactory.cpp  auditFactory.h  auditItemBuilder.cpp  auditItemBuilder.h  auditLogMode.cpp  auditLogMode.h  maps.h
src/modes/authentication/: CMakeLists.txt  authenticationAnalyzer.cpp  authenticationAnalyzer.h  authenticationConfiguration.cpp  authenticationConfiguration.h  authenticationConfigurationWidget.cpp  authenticationConfigurationWidget.h  authenticationFactory.cpp  authenticationFactory.h  authenticationLogMode.cpp  authenticationLogMode.h
src/modes/base/: CMakeLists.txt  fileList.cpp  fileList.h  fileListBase.ui  fileListHelper.cpp  fileListHelper.h  genericConfiguration.cpp  genericConfiguration.h  logLevelFileList.cpp  logLevelFileList.h  logLevelSelectionDialog.cpp  logLevelSelectionDialog.h  logLevelSelectionDialogBase.ui  multipleFileList.cpp  multipleFileList.h  multipleFileListBase.ui  parsingHelper.cpp  parsingHelper.h  syslogAnalyzer.cpp  syslogAnalyzer.h
src/modes/cron/: CMakeLists.txt  cronAnalyzer.cpp  cronAnalyzer.h  cronConfiguration.cpp  cronConfiguration.h  cronConfigurationWidget.cpp  cronConfigurationWidget.h  cronFactory.cpp  cronFactory.h  cronItemBuilder.cpp  cronItemBuilder.h  cronLogMode.cpp  cronLogMode.h
src/modes/cups/: CMakeLists.txt  cupsAccessAnalyzer.cpp  cupsAccessAnalyzer.h  cupsAccessItemBuilder.cpp  cupsAccessItemBuilder.h  cupsAccessLogMode.cpp  cupsAccessLogMode.h  cupsAnalyzer.cpp  cupsAnalyzer.h  cupsConfiguration.cpp  cupsConfiguration.h  cupsConfigurationWidget.cpp  cupsConfigurationWidget.h  cupsFactory.cpp  cupsFactory.h  cupsItemBuilder.cpp  cupsItemBuilder.h  cupsLogMode.cpp  cupsLogMode.h  cupsPageAnalyzer.cpp  cupsPageAnalyzer.h  cupsPageItemBuilder.cpp  cupsPageItemBuilder.h  cupsPageLogMode.cpp  cupsPageLogMode.h  cupsPdfAnalyzer.cpp  cupsPdfAnalyzer.h  cupsPdfItemBuilder.cpp  cupsPdfItemBuilder.h  cupsPdfLogMode.cpp  cupsPdfLogMode.h
src/modes/daemon/: CMakeLists.txt  daemonConfiguration.cpp  daemonConfiguration.h  daemonConfigurationWidget.cpp  daemonConfigurationWidget.h  daemonFactory.cpp  daemonFactory.h  daemonLogMode.cpp  daemonLogMode.h
src/modes/journald/: CMakeLists.txt  journaldAddressDialog.cpp  journaldAddressDialog.h  journaldAddressDialog.ui  journaldAnalyzer.cpp  journaldAnalyzer.h  journaldConfiguration.cpp  journaldConfiguration.h  journaldConfigurationWidget.cpp  journaldConfigurationWidget.h  journaldConfigurationWidget.ui  journaldFactory.cpp  journaldFactory.h  journaldItemBuilder.cpp  journaldItemBuilder.h  journaldLocalAnalyzer.cpp  journaldLocalAnalyzer.h  journaldLogMode.cpp  journaldLogMode.h  journaldNetworkAnalyzer.cpp  journaldNetworkAnalyzer.h  journaldTypes.cpp  journaldTypes.h
src/modes/kernel/: CMakeLists.txt  kernelAnalyzer.cpp  kernelAnalyzer.h  kernelFactory.cpp  (+5 more)
tests/: CMakeLists.txt  findIncompatibleKioTest.cpp  kernelAnalyzerTest.cpp  kioLogFileReaderTest.cpp  logModeFactoryTest.cpp  systemAnalyzerTest.cpp  testResources.qrc  testUtil.cpp  testUtil.h
(+160 files in other folders)
